@@ -46,7 +46,7 @@ APPDIR = ${shell pwd}
 #   appears in this directory as .config)
 # SUBDIRS is the list of all directories containing Makefiles.  It is used
 #   only for cleaning. namedapp must always be the first in the list.  This
-#   list can be extended by the .config file as well
+#   list can be extended by the .config file as well.
 
 CONFIGURED_APPS =
 SUBDIRS = examples graphics interpreters modbus namedapp nshlib netutils system
@@ -70,11 +70,13 @@ SUBDIRS = examples graphics interpreters modbus namedapp nshlib netutils system
 
 ifeq ($(CONFIG_NUTTX_NEWCONFIG),y)
 
+# namedapp/Make.defs must be included first
+
+include namedapp/Make.defs
 include examples/Make.defs
 include graphics/Make.defs
 include interpreters/Make.defs
 include modbus/Make.defs
-include namedapp/Make.defs
 include netutils/Make.defs
 include nshlib/Make.defs
 include system/Make.defs
